--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 
  p 
  {
- font-family: Tahoma;
+ font-family: tahoma;
  color: green;
  }
  
  h2 {
- font-family:comic-sans;
+ font-family:comicsans;
  font-style:underline; 
  text-align: center;
  }
